Split up the DataAccess project into 2 projects so that other technologies can be built on top of the core abstractions. Fixes Updated to build00019

--- a/CLI/Umbrella.CLI.Log4Net/project.json
+++ b/CLI/Umbrella.CLI.Log4Net/project.json
@@ -1,7 +1,7 @@
 ﻿{
-  "version": "1.0.0-rc1-build00018",
+  "version": "1.0.0-rc1-build00019",
   "description": "Umbrella.CLI.Log4Net Class Library",
-  "authors": [ "richardedwards" ],
+  "authors": [ "Richard Edwards" ],
   "tags": [ "" ],
   "projectUrl": "",
   "licenseUrl": "",
