--- a/Legacy/src/Umbrella.Legacy.WebUtilities.DataAnnotations/project.json
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.DataAnnotations/project.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.0.0-rc1-build00018",
+  "version": "1.0.0-rc1-build00019",
   "description": "Umbrella.Legacy.WebUtilities.DataAnnotations Class Library",
-  "authors": [ "richardedwards" ],
+  "authors": [ "Richard Edwards" ],
   "tags": [ "" ],
   "projectUrl": "",
   "licenseUrl": "",
