--- a/Core/Umbrella.DataAccess/project.json
+++ b/Core/Umbrella.DataAccess/project.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.0.0-rc1-build00018",
+  "version": "1.0.0-rc1-build00019",
   "description": "Umbrella.DataAccess Class Library",
-  "authors": [ "richardedwards" ],
+  "authors": [ "Richard Edwards" ],
   "tags": [ "" ],
   "projectUrl": "",
   "licenseUrl": "",
@@ -14,7 +14,6 @@
     }
   },
   "dependencies": {
-    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
     "Umbrella.Utilities": "1.0.0-*"
   }
 }
