--- a/N2CMS/src/Umbrella.N2/project.json
+++ b/N2CMS/src/Umbrella.N2/project.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.0.0-rc1-build00018",
+  "version": "1.0.0-rc1-build00019",
   "description": "Umbrella.N2.Utilities Class Library",
-  "authors": [ "richardedwards" ],
+  "authors": [ "Richard Edwards" ],
   "tags": [ "" ],
   "projectUrl": "",
   "licenseUrl": "",
