--- a/SimpleInjector/Umbrella.Utilities.SimpleInjector/project.json
+++ b/SimpleInjector/Umbrella.Utilities.SimpleInjector/project.json
@@ -1,7 +1,7 @@
 ﻿{
-  "version": "1.0.0-rc1-build00018",
+  "version": "1.0.0-rc1-build00019",
   "description": "Umbrella.Utilities.SimpleInjector Class Library",
-  "authors": [ "richardedwards" ],
+  "authors": [ "Richard Edwards" ],
   "tags": [ "" ],
   "projectUrl": "",
   "licenseUrl": "",
