--- a/SimpleInjector/Umbrella.Legacy.WebUtilities.DynamicImage.SimpleInjector/project.lock.json
+++ b/SimpleInjector/Umbrella.Legacy.WebUtilities.DynamicImage.SimpleInjector/project.lock.json
@@ -304,7 +304,7 @@
           "lib/net45/SimpleInjector.dll": {}
         }
       },
-      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00026": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -313,7 +313,7 @@
           "Newtonsoft.Json": "8.0.3"
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -323,7 +323,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -344,7 +344,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -358,7 +358,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -371,7 +371,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -382,11 +382,10 @@
           "PresentationCore",
           "System.Configuration",
           "System.ServiceModel",
-          "System.Xml",
-          "WindowsBase"
+          "System.Xml"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -400,7 +399,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage.SimpleInjector/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities.DynamicImage.SimpleInjector/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -723,7 +722,7 @@
           "lib/net45/SimpleInjector.dll": {}
         }
       },
-      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00026": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -732,7 +731,7 @@
           "Newtonsoft.Json": "8.0.3"
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -742,7 +741,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -763,7 +762,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -777,7 +776,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -790,7 +789,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -801,11 +800,10 @@
           "PresentationCore",
           "System.Configuration",
           "System.ServiceModel",
-          "System.Xml",
-          "WindowsBase"
+          "System.Xml"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -819,7 +817,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage.SimpleInjector/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities.DynamicImage.SimpleInjector/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1142,7 +1140,7 @@
           "lib/net45/SimpleInjector.dll": {}
         }
       },
-      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00026": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1151,7 +1149,7 @@
           "Newtonsoft.Json": "8.0.3"
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1161,7 +1159,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1182,7 +1180,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1196,7 +1194,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1209,7 +1207,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1220,11 +1218,10 @@
           "PresentationCore",
           "System.Configuration",
           "System.ServiceModel",
-          "System.Xml",
-          "WindowsBase"
+          "System.Xml"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1238,7 +1235,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage.SimpleInjector/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities.DynamicImage.SimpleInjector/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1261,35 +1258,35 @@
     }
   },
   "libraries": {
-    "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00026": {
+    "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Core/Umbrella.Extensions.Logging.Log4Net/project.json"
     },
-    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00026": {
+    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Legacy/Umbrella.Legacy.Utilities/project.json"
     },
-    "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00026": {
+    "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Legacy/Umbrella.Legacy.WebUtilities/project.json"
     },
-    "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00026": {
+    "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Legacy/Umbrella.Legacy.WebUtilities.DynamicImage/project.json"
     },
-    "Umbrella.Utilities/1.0.0-rc1-build00026": {
+    "Umbrella.Utilities/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities/project.json"
     },
-    "Umbrella.WebUtilities/1.0.0-rc1-build00026": {
+    "Umbrella.WebUtilities/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Core/Umbrella.WebUtilities/project.json"
     },
-    "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00026": {
+    "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Core/Umbrella.WebUtilities.DynamicImage/project.json"
     },
-    "Umbrella.WebUtilities.DynamicImage.SimpleInjector/1.0.0-rc1-build00026": {
+    "Umbrella.WebUtilities.DynamicImage.SimpleInjector/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../Umbrella.WebUtilities.DynamicImage.SimpleInjector/project.json"
     },
