--- a/SimpleInjector/Umbrella.Legacy.WebUtilities.SimpleInjector/project.lock.json
+++ b/SimpleInjector/Umbrella.Legacy.WebUtilities.SimpleInjector/project.lock.json
@@ -277,7 +277,7 @@
           "lib/net45/SimpleInjector.dll": {}
         }
       },
-      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00026": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -286,7 +286,7 @@
           "Newtonsoft.Json": "8.0.3"
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -296,7 +296,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -317,7 +317,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -330,7 +330,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -341,8 +341,7 @@
           "PresentationCore",
           "System.Configuration",
           "System.ServiceModel",
-          "System.Xml",
-          "WindowsBase"
+          "System.Xml"
         ]
       },
       "WebActivatorEx/2.1.0": {
@@ -633,7 +632,7 @@
           "lib/net45/SimpleInjector.dll": {}
         }
       },
-      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00026": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -642,7 +641,7 @@
           "Newtonsoft.Json": "8.0.3"
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -652,7 +651,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -673,7 +672,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -686,7 +685,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -697,8 +696,7 @@
           "PresentationCore",
           "System.Configuration",
           "System.ServiceModel",
-          "System.Xml",
-          "WindowsBase"
+          "System.Xml"
         ]
       },
       "WebActivatorEx/2.1.0": {
@@ -989,7 +987,7 @@
           "lib/net45/SimpleInjector.dll": {}
         }
       },
-      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00026": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -998,7 +996,7 @@
           "Newtonsoft.Json": "8.0.3"
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1008,7 +1006,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1029,7 +1027,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00026": {
+      "Umbrella.Utilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1042,7 +1040,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00026": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00028": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
@@ -1053,8 +1051,7 @@
           "PresentationCore",
           "System.Configuration",
           "System.ServiceModel",
-          "System.Xml",
-          "WindowsBase"
+          "System.Xml"
         ]
       },
       "WebActivatorEx/2.1.0": {
@@ -1072,23 +1069,23 @@
     }
   },
   "libraries": {
-    "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00026": {
+    "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Core/Umbrella.Extensions.Logging.Log4Net/project.json"
     },
-    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00026": {
+    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Legacy/Umbrella.Legacy.Utilities/project.json"
     },
-    "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00026": {
+    "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Legacy/Umbrella.Legacy.WebUtilities/project.json"
     },
-    "Umbrella.Utilities/1.0.0-rc1-build00026": {
+    "Umbrella.Utilities/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities/project.json"
     },
-    "Umbrella.WebUtilities/1.0.0-rc1-build00026": {
+    "Umbrella.WebUtilities/1.0.0-rc1-build00028": {
       "type": "project",
       "path": "../../Core/Umbrella.WebUtilities/project.json"
     },
