--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/project.json
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-rc1-build00036",
+  "version": "1.0.0-rc1-build00037",
   "description": "Umbrella.AspNetCore.WebUtilities Class Library",
   "authors": [ "Richard Edwards" ],
   "tags": [ "" ],
@@ -7,7 +7,8 @@
   "licenseUrl": "",
 
   "frameworks": {
-    "dnx46": { }
+    "dnx46": { },
+    "net46": { }
   },
 
   "dependencies": {
