--- a/Core/src/Umbrella.WebUtilities/project.json
+++ b/Core/src/Umbrella.WebUtilities/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc1-build00037",
+  "version": "1.0.0-rc1-build00038",
   "description": "Umbrella.WebUtilities Class Library",
   "authors": [ "Richard Edwards" ],
   "tags": [ "" ],
@@ -24,7 +24,6 @@
     }
   },
   "dependencies": {
-    "Umbrella.Utilities": "1.0.0-*",
-    "WebActivatorEx": "2.1.0"
+    "Umbrella.Utilities": "1.0.0-*"
   }
 }
