--- a/N2CMS/src/Umbrella.N2/project.json
+++ b/N2CMS/src/Umbrella.N2/project.json
@@ -6,6 +6,7 @@
   "frameworks": {
     "net46": {
       "frameworkAssemblies": {
+        "System.Drawing": "4.0.0.0",
         "System.Web": "4.0.0.0"
       }
     }
