Changes to the GenericRepository class to incorporate enhancements required to make code execution more efficient.
Made the Umbrella.AspNetCore.WebUtilities project dependent on the DataAccess project (which only contains abstractions - no hard dependency on EF) to allow a utility method to be added to the UmbrellaApiController for handling DataAccessValidationException instances.

--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/project.json
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "1.0.0-rc2-build00002",
   "description": "Umbrella.AspNetCore.WebUtilities Class Library",
   "authors": [ "Richard Edwards" ],
@@ -11,6 +11,7 @@
     "Microsoft.AspNetCore.Hosting": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Http": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
+    "Umbrella.DataAccess": "1.0.0-rc2-build00002",
     "Umbrella.WebUtilities": "1.0.0-*"
   }
 }
