--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/project.lock.json
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/project.lock.json
@@ -889,6 +889,19 @@
           "lib/net45/_._": {}
         }
       },
+      "Umbrella.DataAccess/1.0.0-rc2-build00002": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.6",
+        "dependencies": {
+          "Umbrella.Utilities": "1.0.0"
+        },
+        "compile": {
+          "net46/Umbrella.DataAccess.dll": {}
+        },
+        "runtime": {
+          "net46/Umbrella.DataAccess.dll": {}
+        }
+      },
       "Umbrella.Utilities/1.0.0-rc2-build00002": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
@@ -2966,6 +2979,11 @@
         "ref/xamarinwatchos10/_._"
       ]
     },
+    "Umbrella.DataAccess/1.0.0-rc2-build00002": {
+      "type": "project",
+      "path": "../../Core/Umbrella.DataAccess/project.json",
+      "msbuildProject": "../../Core/Umbrella.DataAccess/Umbrella.DataAccess.xproj"
+    },
     "Umbrella.Utilities/1.0.0-rc2-build00002": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities/project.json",
@@ -2982,6 +3000,7 @@
       "Microsoft.AspNetCore.Hosting >= 1.0.0-rc2-final",
       "Microsoft.AspNetCore.Http >= 1.0.0-rc2-final",
       "Microsoft.AspNetCore.Mvc.ViewFeatures >= 1.0.0-rc2-final",
+      "Umbrella.DataAccess >= 1.0.0-rc2-build00002",
       "Umbrella.WebUtilities >= 1.0.0-*"
     ],
     ".NETFramework,Version=v4.6": []
