--- a/Logging/src/Umbrella.Extensions.Logging.Log4Net.Azure/project.json
+++ b/Logging/src/Umbrella.Extensions.Logging.Log4Net.Azure/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-rc2-build00005",
+  "version": "1.0.0-rel-build00001",
   "description": "Umbrella.Extensions.Logging.Log4Net.Azure Class Library",
   "authors": [ "Richard Edwards" ],
 
