--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/project.json
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc2-build00005",
+  "version": "1.0.0-rel-build00001",
   "description": "Umbrella.AspNetCore.WebUtilities Class Library",
   "authors": [ "Richard Edwards" ],
 
@@ -8,10 +8,10 @@
   },
 
   "dependencies": {
-    "Microsoft.AspNetCore.Hosting": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Http": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
-    "Umbrella.DataAccess": "1.0.0-rc2-build00005",
+    "Microsoft.AspNetCore.Hosting": "1.0.0",
+    "Microsoft.AspNetCore.Http": "1.0.0",
+    "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0",
+    "Umbrella.DataAccess": "1.0.0-*",
     "Umbrella.WebUtilities": "1.0.0-*"
   }
 }
