--- a/Core/Umbrella.Utilities.Drawing/project.json
+++ b/Core/Umbrella.Utilities.Drawing/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-rc2-build00005",
+  "version": "1.0.0-rel-build00001",
   "description": "Umbrella.Utilities Class Library",
   "authors": [ "Richard Edwards" ],
   "dependencies": {
