--- a/Core/Umbrella.Utilities.Log4Net/project.json
+++ b/Core/Umbrella.Utilities.Log4Net/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc2-build00005",
+  "version": "1.0.0-rel-build00001",
   "description": "Umbrella.Utilities.Log4Net Class Library",
   "authors": [ "Richard Edwards" ],
 
@@ -8,6 +8,6 @@
   },
   "dependencies": {
     "log4net": "2.0.5",
-    "Newtonsoft.Json": "8.0.3"
+    "Newtonsoft.Json": "9.0.1"
   }
 }
