--- a/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore/project.json
+++ b/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-rc2-build00005",
+  "version": "1.0.0-rel-build00001",
   "description": "Umbrella.DataAccess.EntityFrameworkCore Class Library",
   "authors": [ "Richard Edwards" ],
 
@@ -8,7 +8,7 @@
   },
 
   "dependencies": {
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0",
     "Umbrella.DataAccess": "1.0.0-*"
   }
 }
