--- a/Legacy/src/Umbrella.Legacy.WebUtilities/project.json
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc2-build00005",
+  "version": "1.0.0-rel-build00001",
   "description": "Umbrella.Legacy.WebUtilities Class Library",
   "authors": [ "Richard Edwards" ],
 
