--- a/SimpleInjector/Umbrella.Legacy.WebUtilities.SimpleInjector/project.json
+++ b/SimpleInjector/Umbrella.Legacy.WebUtilities.SimpleInjector/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc2-build00005",
+  "version": "1.0.0-rel-build00001",
   "description": "Umbrella.Legacy.WebUtilities.SimpleInjector Class Library",
   "authors": [ "Richard Edwards" ],
 
@@ -8,7 +8,7 @@
   },
 
   "dependencies": {
-    "SimpleInjector": "3.1.3",
+    "SimpleInjector": "3.2.0",
     "Umbrella.Legacy.WebUtilities": "1.0.0-*"
   }
 }
