--- a/WCF/src/Umbrella.Extensions.DependencyInjection.WCF/project.json
+++ b/WCF/src/Umbrella.Extensions.DependencyInjection.WCF/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-rc2-build00005",
+  "version": "1.0.0-rel-build00001",
   "description": "Umbrella.Extensions.DependencyInjection.WCF Class Library",
   "authors": [ "Richard Edwards" ],
   "frameworks": {
@@ -12,6 +12,6 @@
     }
   },
   "dependencies": {
-    "Microsoft.Extensions.DependencyInjection": "1.0.0-rc2-final"
+    "Microsoft.Extensions.DependencyInjection": "1.0.0"
   }
 }
