Added a DataAccessLookupNormalizer to normalize strings when saving to the database. Added extension methods to encapsulate DI registrations into a single method call from consuming apps. Updated to rel-build00002

--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/project.lock.json
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/project.lock.json
@@ -1005,6 +1005,7 @@
         "type": "project",
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
+          "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
           "Umbrella.Utilities": "1.0.0"
         },
         "compile": {
@@ -1019,6 +1020,7 @@
         "framework": ".NETFramework,Version=v4.6",
         "dependencies": {
           "Microsoft.Extensions.Caching.Abstractions": "1.0.0",
+          "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
           "Microsoft.Extensions.Logging.Abstractions": "1.0.0",
           "Newtonsoft.Json": "9.0.1"
         },
