--- a/Core/src/Umbrella.Utilities/project.json
+++ b/Core/src/Umbrella.Utilities/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rel-build00001",
+  "version": "1.0.0-rel-build00002",
   "description": "Umbrella.Utilities Class Library",
   "authors": [ "Richard Edwards" ],
   "frameworks": {
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "Microsoft.Extensions.Caching.Abstractions": "1.0.0",
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
     "Microsoft.Extensions.Logging.Abstractions": "1.0.0",
     "Newtonsoft.Json": "9.0.1"
   }
