--- a/Core/src/Umbrella.ActiveDirectory/project.json
+++ b/Core/src/Umbrella.ActiveDirectory/project.json
@@ -1,12 +1,13 @@
-{
+﻿{
   "version": "1.0.0-rel-build00028",
-  "description": "Umbrella.DataAccess Class Library",
+  "description": "Umbrella.ActiveDirectory Class Library",
   "authors": [ "Richard Edwards" ],
   "frameworks": {
-    "net46": { }
+    "net46": {}
   },
   "dependencies": {
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
-    "Umbrella.Utilities": "1.0.0-*"
+    "Umbrella.Utilities": "1.0.0-*",
+    "Microsoft.IdentityModel.Clients.ActiveDirectory": "3.13.1"
   }
 }
