Created a new project for the MappingUtility class. Azure log4net changes to allow custom message properties. Updated to rel-build00031

--- a/DataAccess/src/Umbrella.DataAccess.Mapping/project.json
+++ b/DataAccess/src/Umbrella.DataAccess.Mapping/project.json
@@ -1,13 +1,13 @@
 ﻿{
   "version": "1.0.0-rel-build00031",
-  "description": "Umbrella.ActiveDirectory Class Library",
+  "description": "Umbrella.DataAccess.Mapping Class Library",
   "authors": [ "Richard Edwards" ],
   "frameworks": {
     "net46": {}
   },
   "dependencies": {
+    "AutoMapper": "5.0.2",
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
-    "Umbrella.Utilities": "1.0.0-*",
-    "Microsoft.IdentityModel.Clients.ActiveDirectory": "3.13.1"
+    "Umbrella.DataAccess": "1.0.0-*"
   }
 }
