Removed duplicated class Removed the EmailHelper class Code changes to support targeting NETStandard1.6 for the Umbrella.Utilities project as an expiriment to check if using it in a real project works. Updated to build00051

--- a/Core/src/Umbrella.Utilities/project.json
+++ b/Core/src/Umbrella.Utilities/project.json
@@ -1,11 +1,16 @@
 {
-  "version": "1.0.0-rel-build00050",
+  "version": "1.0.0-rel-build00051",
   "description": "Umbrella.Utilities Class Library",
   "authors": [ "Richard Edwards" ],
   "frameworks": {
     "net46": {
       "frameworkAssemblies": {
         "System.Runtime": "4.0.20.0"
+      }
+    },
+    "netstandard1.6": {
+      "dependencies": {
+        "NETStandard.Library": "1.6.0"
       }
     }
   },
