--- a/Core/src/Umbrella.Utilities/project.json
+++ b/Core/src/Umbrella.Utilities/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rel-build00075",
+  "version": "1.0.0-rel-build00076",
   "description": "Umbrella.Utilities Class Library",
   "authors": [ "Richard Edwards" ],
   "frameworks": {
@@ -10,14 +10,14 @@
     },
     "netstandard1.6": {
       "dependencies": {
-        "NETStandard.Library": "1.6.0"
       }
     }
   },
   "dependencies": {
-    "Microsoft.Extensions.Caching.Abstractions": "1.0.0",
-    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
-    "Microsoft.Extensions.Logging.Abstractions": "1.0.0",
+    "Microsoft.Extensions.Caching.Abstractions": "1.1.0",
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.1.0",
+    "Microsoft.Extensions.Logging.Abstractions": "1.1.0",
+    "NETStandard.Library": "1.6.1",
     "Newtonsoft.Json": "9.0.1"
   }
 }
