Removed all project.lock.json files - should not be under source control Created a new Umbrella.TypeScript.Annotations project to separate out the attrubutes / enums to avoid creating a runtime dependency on the main Umbrella.TypeScript assembly which is only really needed for development T4 stuff. Updated to build00077

--- a/TypeScript/src/Umbrella.TypeScript/project.json
+++ b/TypeScript/src/Umbrella.TypeScript/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-rel-build00076",
+  "version": "1.0.0-rel-build00077",
   "description": "Umbrella.TypeScript Class Library",
   "authors": [ "Richard Edwards" ],
 
@@ -11,6 +11,7 @@
     }
   },
   "dependencies": {
+    "Umbrella.TypeScript.Annotations": "1.0.0-*",
     "Umbrella.Utilities": "1.0.0-*"
   }
 }
