--- a/Core/src/Umbrella.Utilities/project.json
+++ b/Core/src/Umbrella.Utilities/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rel-build00076",
+  "version": "1.0.0-rel-build00077",
   "description": "Umbrella.Utilities Class Library",
   "authors": [ "Richard Edwards" ],
   "frameworks": {
@@ -10,6 +10,7 @@
     },
     "netstandard1.6": {
       "dependencies": {
+        "NETStandard.Library": "1.6.1"
       }
     }
   },
@@ -17,7 +18,6 @@
     "Microsoft.Extensions.Caching.Abstractions": "1.1.0",
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.1.0",
     "Microsoft.Extensions.Logging.Abstractions": "1.1.0",
-    "NETStandard.Library": "1.6.1",
     "Newtonsoft.Json": "9.0.1"
   }
 }
