Added a powershell script to allow the package version to be updated inside all .csproj files. Updated version to build00095

--- a/Core/test/Umbrella.DataAnnotations.Test/Umbrella.DataAnnotations.Test.csproj
+++ b/Core/test/Umbrella.DataAnnotations.Test/Umbrella.DataAnnotations.Test.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <VersionPrefix>1.0.0-rel-build00094</VersionPrefix>
+    <VersionPrefix>1.0.0-rel-build00095</VersionPrefix>
     <TargetFramework>net46</TargetFramework>
     <AssemblyName>Umbrella.DataAnnotations.Test</AssemblyName>
     <PackageId>Umbrella.DataAnnotations.Test</PackageId>
