--- a/AspNetCore/src/Umbrella.AspNetCore.DataAnnotations/Umbrella.AspNetCore.DataAnnotations.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.DataAnnotations/Umbrella.AspNetCore.DataAnnotations.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>Umbrella.AspNetCore.DataAnnotations Class Library</Description>
-    <VersionPrefix>1.0.0-rel-build00094</VersionPrefix>
+    <VersionPrefix>1.0.0-rel-build00095</VersionPrefix>
     <Authors>Richard Edwards</Authors>
     <TargetFramework>net46</TargetFramework>
     <AssemblyName>Umbrella.AspNetCore.DataAnnotations</AssemblyName>
