--- a/Logging/src/Umbrella.Extensions.Logging.Log4Net/Umbrella.Extensions.Logging.Log4Net.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.Log4Net/Umbrella.Extensions.Logging.Log4Net.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>Umbrella.Extensions.Logging.Log4Net Class Library</Description>
-    <VersionPrefix>1.0.0-rel-build00094</VersionPrefix>
+    <VersionPrefix>1.0.0-rel-build00095</VersionPrefix>
     <Authors>Richard Edwards</Authors>
     <TargetFramework>net46</TargetFramework>
     <AssemblyName>Umbrella.Extensions.Logging.Log4Net</AssemblyName>
