--- a/TypeScript/src/Umbrella.TypeScript.Annotations/Umbrella.TypeScript.Annotations.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Annotations/Umbrella.TypeScript.Annotations.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>Umbrella.TypeScript.Annotations Class Library</Description>
-    <VersionPrefix>1.0.0-rel-build00094</VersionPrefix>
+    <VersionPrefix>1.0.0-rel-build00095</VersionPrefix>
     <Authors>Richard Edwards</Authors>
     <TargetFrameworks>net46;netstandard1.6</TargetFrameworks>
     <AssemblyName>Umbrella.TypeScript.Annotations</AssemblyName>
